# multimodalinput_input

./: 5144_0822.diff  AGENTS.md  BUILD.gn  CLAUDE.md  CODEOWNERS  CODEOWNERS.h  KeyboardController_Design_Document.md  KeyboardController_Implementation_Summary.md  MouseController_Implementation_Constraints.md  MouseController_Implementation_Gap_Analysis.md  OAT.xml  README.en.md  README.md  README_zh.md  accessible_bugfix.md  bugfix.md  bundle.json  cockpit_implementation_plan.md  data  demo.diff  hq  mmi.gni  mmi_uinput.rc  multimodalinput.cfg  multimodalinput.rc  multimodalinput_input.diff.txt  multimodalinput_mini.gni  ohos.build  patch.diff  pen_hover_redispatch_design.md  t  todo.md  插件框架通用配置读取接口设计方案.md  鼠标中键转按键插件设计方案.md
common/property_name_mapper/: BUILD.gn
common/property_name_mapper/include/: i_property_name_mapper.h  property_name_mapper.h  property_name_mapper_impl.h
common/property_name_mapper/src/: property_name_mapper.cpp  property_name_mapper_impl.cpp
common/property_name_mapper/test/: property_name_mapper_impl_test.cpp  property_name_mapper_test.cpp
etc/: BUILD.gn  ability_launch_config.json  exceptional_system_keys_config.json  exclude_keys_config.json  multimodal_input_plugins_config.json  multimodalinput.para  multimodalinput.para.dac  pack_resources.py  pointer_motion_acceleration_config.json  special_input_device_config.json  system_hotkeys_config.json  system_keys_config.json  triple_finger_snapshot.json  white_list_config.json
etc/joystick/: BUILD.gn
etc/joystick/layout/: Vendor_0079_Product_0011.json  Vendor_0171_Product_0419.json  Vendor_045e_Product_028e.json  Vendor_045e_Product_02e0.json  Vendor_045e_Product_02e3.json  Vendor_045e_Product_02fd.json  Vendor_046d_Product_b501.json  Vendor_046d_Product_c216.json  Vendor_046d_Product_c219.json  Vendor_046d_Product_c21d.json  Vendor_046d_Product_c294.json  Vendor_046d_Product_c299.json  Vendor_046d_Product_c532.json  Vendor_054c_Product_0268.json  Vendor_054c_Product_0268_Version_8100.json  Vendor_054c_Product_09cc_Version_8000.json  Vendor_054c_Product_0ce6_fallback.json  Vendor_056e_Product_2010.json  Vendor_056e_Product_2013.json  Vendor_057e_Product_2009.json  Vendor_0583_Product_2060.json  Vendor_0957_Product_0001.json  Vendor_0e6f_Product_f900.json  Vendor_0f0d_Product_00c1.json  Vendor_1038_Product_1412.json  Vendor_12bd_Product_d015.json  Vendor_1532_Product_0705.json  Vendor_1532_Product_0709.json  Vendor_1532_Product_0900.json  Vendor_1532_Product_100a.json  Vendor_1689_Product_fd00.json  Vendor_1689_Product_fe00.json  Vendor_18d1_Product_0200.json  Vendor_18d1_Product_2c40.json  Vendor_18d1_Product_4f80.json  Vendor_18d1_Product_5018.json  Vendor_18d1_Product_9451.json  Vendor_1949_Product_0401.json  Vendor_1d79_Product_0009.json  Vendor_20bc_Product_5126.json  (+4 more)
etc/mouse_icon/: BUILD.gn
examples/hosmmi/: BUILD.gn
examples/hosmmi/src/: hosmmi_client_main.cpp  hosmmi_event_simulate_main.cpp  hosmmi_server_main.cpp  hosmmi_service_main.cpp  hosmmi_virtual_device_main.cpp
examples/mmi/: BUILD.gn
examples/mmi/src/: mmi_client_main.cpp  mmi_server_main.cpp  mmi_service_main.cpp
frameworks/proxy/: BUILD.gn  ipc_blocklist.txt
frameworks/util/: BUILD.gn
intention/dfx/: BUILD.gn
intention/dfx/include/: cooperate_hisysevent.h
intention/dfx/src/: cooperate_hisysevent.cpp
intention/prototype/: BUILD.gn
intention/prototype/include/: i_common_event_adapter.h  i_context.h  i_cooperate.h  i_ddm_adapter.h  i_delegate_tasks.h  i_device.h  i_device_manager.h  i_device_observer.h  i_dinput_adapter.h  i_drag_manager.h  i_dsoftbus_adapter.h  i_epoll_event_source.h  i_input_adapter.h  i_motion_drag.h  i_plugin.h  i_plugin_manager.h  i_socket_session.h  i_socket_session_manager.h  i_task_scheduler.h  i_timer_manager.h  i_tunnel_client.h  intention_identity.h
intention/prototype/src/: i_dsoftbus_adapter.cpp
libudev/: BUILD.gn
libudev/include/: libudev.h
libudev/src/: udev_device.cpp
libudev/test/: custom_udev_test.cpp  e2e_udev_test.cpp  test_device.h
patch/: BUILD.gn  apply_patch.sh
patch/diff_libevdev_hdf/: BUILD.gn  libevdev_hdf_0000.diff
patch/diff_libinput_mmi/: BUILD.gn
patch/diff_libinput_mmi/hdf/: libinput_hdf_0000.diff
patch/diff_libinput_mmi/libinput/: libinput_0000.diff
patch/diff_libmtdev_mmi/: BUILD.gn
patch/diff_libmtdev_mmi/mtdev/: mtdev_0000.diff
patch/diff_mtdev_hdf/: BUILD.gn  mtdev_hdf_0000.diff
patch/prebuild_eudev/: BUILD.gn
patch/prebuild_eudev/hwdb.d/: 20-libgphoto2-6.hwdb  20-sane.hwdb  30-pci-intel-gpu.hwdb  60-keyboard.hwdb  69-libmtp.hwdb  70-mouse.hwdb  70-touchpad.hwdb
patch/prebuild_eudev/rules.d/: 50-udev-default.rules  60-gpsd.rules  60-libfprint-2.rules  60-libgphoto2-6.rules  60-libsane.rules  61-gdm.rules  65-libwacom.rules  69-libmtp.rules  70-printers.rules  85-hplj10xx.rules  90-libgpod.rules  90-pulseaudio.rules  99-fuse.rules  99-virtual_touchpad.rules
patch/prebuild_libinput/: BUILD.gn
patch/prebuild_x_keyboard_config/: BUILD.gn
service/: BUILD.gn  hisysevent.yaml  hisysevent_input_ue.yaml  ipc_blocklist.txt  libmmi-server-map  mmi_log.conf  multimodalinput_service.rc
service/ability_launch/include/: ability_launch_manager.h  i_multi_key.h  non_multi_key.h
service/ability_launch/src/: ability_launch_manager.cpp  (+1 more)
service/connect_manager/: BUILD.gn  IInputBinderClient.idl  IMultimodalInputConnect.idl
service/custom_config/: BUILD.gn
service/custom_config_parser/: BUILD.gn
service/dinput/: BUILD.gn
service/event_filter_binder/: BUILD.gn
service/filter/: BUILD.gn  IEventFilter.idl
service/include/: multimodal_input_service.h  multimodal_input_service_stub.h
service/joystick/: BUILD.gn
service/mouse_event_normalize/: BUILD.gn
service/src/: multimodal_input_service.cpp  multimodal_input_service_stub.cpp
service/touch_event_normalize/: BUILD.gn
service/window_manager/: BUILD.gn
util/: BUILD.gn  libmmi-util-map
util/KeyValueTransform/: default_key.pro  key_universal.pro
util/common/: BUILD.gn
util/json_parser/: BUILD.gn
util/napi/: BUILD.gn
util/screen_capture/: BUILD.gn
(+3717 files in other folders)
